--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "react-multi-carousel": "^2.8.4",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
