--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "cards": "^2.0.3",
+    "carrusel": "^1.2.3",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
