--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-icons": "^4.11.0",
     "react-multi-carousel": "^2.8.4",
     "react-paginate": "^8.2.0",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
