--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-multi-carousel": "^2.8.4",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.17.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
